--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "ag-grid-react": "^33.1.1",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
